# booking-agent-poc

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  ingest.sh  main.py  pyproject.toml  requirements.txt
agents/: Dockerfile  requirements.txt
agents/app/: graph.py  main.py  mcp_client.py
db/: init.sql
diagram/: restaurant-booking-agent.drawio
ingest/: Dockerfile  ingest.py  requirements.txt
mcp-server/: server.py
mcp-server/tools/: rag_pipeline.py  rag_system.py
mcp_server/: Dockerfile  requirements.txt  server-bk.py  server.py
mcp_server/tools/: ingest.py  menu_rag.py  rag_pipeline.py  rag_tools.py  reservation_tool.py  validation.py
mcp_server/tools/booking/: booking_models.py  booking_repo.py
mcp_server/tools/menu/: cuisine_keywords.json  menu_rag.py
sample_menu/: README.md  menu_items.json
scripts/: start.sh
streamlit/: Dockerfile  index.py
