[project]
name = "booking-agent-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langsmith>=0.4.25",
    "mcp[cli]>=1.13.1",
    "ollama>=0.5.3",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
